# MimiML

./: detect_latest_pr.ml
.github/workflows/: PR.yml  PrPost.yml
JaML/lib/: anfconv.ml  closure.ml  lambdalift.ml
JaML/lib/tests/: anf_tests.ml  closure_tests.ml  lambdalift_tests.ml
MimiML/: dune
MimiML/demos/: demoANF.t  demoAsm.ml  demoAsm.t  dune
MimiML/lib/: anf.ml  asm.ml  asm.mli  dune  parser.ml  pp.ml  pp.mli
MimiML/stdlib/: stdlib.c
MimiML/test/: dune
mimiml/: dune  dune-project
mimiml/lib/: dune
