(executable
 (name demoTypeChecker)
 (modules demoTypeChecker)
 (public_name demoTypeChecker)
 (libraries MimiML_lib stdio))

(cram
 (deps ./demoTypeChecker.exe))

(executable
 (name demoANF)
 (modules demoANF)
 (public_name demoANF)
 (libraries MimiML_lib stdio))

(cram
 (deps ./demoANF.exe))

(executable
 (name demoAsm)
 (modules demoAsm)
 (public_name demoAsm)
 (libraries MimiML_lib stdio)
 (link_deps
  (file ../stdlib/stdlib.c)))

(cram
 (deps ./demoAsm.exe ../stdlib/stdlib.c))
